cabal-version:      2.2
Category:           Biology
build-type:         Simple
name:               pcg-data-unification
version:            0.2.0

author:             Ward Wheeler
maintainer:         wheeler@amnh.org
license:            BSD-3-Clause
license-file:       LICENSE

synopsis:           Checking consistentcy and unifiying data from disprate input sources.

description:        Library for taking data from disperate input sources and unified the
                    data into a consistent form.


-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common ghc-flags

  ghc-options:
    -- Optimization flags
    -O2
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -foptimal-applicative-do
    -fspecialize-aggressively
    -fstatic-argument-transformation
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-monadfail-instances
    -Wmissing-signatures
    -Wnoncanonical-monadfail-instances
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind


-- Global deviations from Haskell98
common language-specs

  default-language: Haskell2010

  -- Always use MonadFail(fail), not Monad(fail)
  other-extensions: MonadFailDesugaring


library

  import:             
    ghc-flags,
    language-specs

  hs-source-dirs:
    src

  build-depends:
    pcg-core,
    pcg-data-normalization,
    pcg-file-source,            
    pcg-utility,
    pcg-serialize,
    base                     >= 4.11      && < 5.0,
    -- >=0.5.8 Required for Data.Map.restrictKeys
    containers               >= 0.5.8     && < 0.7,
    data-default             >= 0.5.2     && < 0.8,
    deepseq                  >= 1.4       && < 2.0,
    keys                     >= 3.0       && < 4.0,
    lens                     >= 4.17      && < 5.0,
    mtl                      >= 2.0       && < 3.0,
    parallel                 >= 3.2       && < 4.0,
    -- required for Data.Semigroup.Foldable.toNonEmpty
    semigroupoids            >= 5.2.1     && < 5.4,
    semigroups               >= 0.18      && < 1.0,
    text                     >= 1.2       && < 2.0,
    text-short               >= 0.1       && < 1.0,
    text-show                >= 3.0       && < 4.0,
    transformers             >= 0.5.6     && < 1.0,
    validation               >= 1.1       && < 2.0,

  exposed-modules:
    Data.Unification

  other-modules:
    Data.Unification.Error
    Data.Unification.InputData
