cabal-version:      2.2
category:           Parser
build-type:         Simple

name:               pcg-file-parsers
version:            0.0.1.1

author:             Ward Wheeler
maintainer:         wheeler@amnh.org
license:            BSD-3-Clause
license-file:       LICENSE

synopsis:           Parsers for the input file types accepted by PCG

description:        Defines file parsers for Fasta files with sequence spliting,
                    Newick files with support for extended newick format, Nexus
                    files (though many block types are skipped), DOT files as
                    graph input, TNT files (though many commands are skipped),
                    and custom file formats for parsing transition cost matrices
                    with an alphabet, and the depricated vertex/edge/root set
                    format.


common ghc-settings

  default-language: Haskell2010

  ghc-options:      -O2
                    -- We turn this on to make the most of ApplicativeDo usage
                    -foptimal-applicative-do
                    -Wall
                    -Wcompat
                    -Wdodgy-foreign-imports
                    -Wduplicate-exports
                    -Wempty-enumerations
                    -Widentities
                    -Wincomplete-patterns
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-fields
                    -Wmissing-home-modules
                    -Wmissing-monadfail-instances
                    -Wmissing-monadfail-instances
                    -Wmissing-signatures
                    -Wnoncanonical-monadfail-instances
                    -Wnoncanonical-monad-instances
                    -Wnoncanonical-monoid-instances
                    -Woverflowed-literals
                    -Woverlapping-patterns
                    -Wredundant-constraints
                    -Wsemigroup
                    -Wtabs
                    -Wunrecognised-warning-flags
                    -Wunrecognised-warning-flags
                    -Wunused-binds
                    -Wunused-do-bind
                    -Wunused-foralls
                    -Wunused-imports
                    -Wunused-matches
                    -Wwrong-do-bind

  other-extensions: MonadFailDesugaring


library

  import:           ghc-settings

  build-depends:    base               >=4.10
                  , case-insensitive
                  -- >=0.5.8 Required for Data.Map.restrictKeys
                  , containers         >=0.5.8
                  , dlist
                    -- >=2999.20 Required for forgivig constructio of DOT object
                  , graphviz           >=2999.20
                  , keys
                  , megaparsec         >=7.0.0
                  , mtl
                  , parser-combinators >=0.2.0
                  , pcg-utility
                  , safe
                  , scientific
                  , semigroupoids
                  , text
                  -- >=0.12.0.2 required for compatability with "compact regions"
                  , vector             >=0.12.0.2 

  hs-source-dirs:   src

  exposed-modules:  File.Format.Dot
                    File.Format.Fasta
                    File.Format.Fastc
                    File.Format.Newick
                    File.Format.Nexus
                    File.Format.TNT
                    File.Format.TransitionCostMatrix
                    File.Format.VertexEdgeRoot

  other-modules:    File.Format.Fasta.Converter
                    File.Format.Fasta.Internal
                    File.Format.Fasta.Parser
                    File.Format.Fastc.Parser
                    File.Format.Newick.Internal
                    File.Format.Newick.Parser
                    File.Format.Nexus.Data
                    File.Format.Nexus.Parser
                    File.Format.Nexus.Partition
                    File.Format.Nexus.Validate
                    File.Format.TNT.Command.CCode
                    File.Format.TNT.Command.CNames
                    File.Format.TNT.Command.Cost
                    File.Format.TNT.Command.NStates
                    File.Format.TNT.Command.Procedure
                    File.Format.TNT.Command.TRead
                    File.Format.TNT.Command.XRead
                    File.Format.TNT.Parser
                    File.Format.TNT.Partitioning
                    File.Format.TNT.Internal
                    File.Format.TransitionCostMatrix.Parser
                    File.Format.VertexEdgeRoot.Parser
                    Text.Megaparsec.Custom


Test-Suite unit-tests

  import:           ghc-settings

  type:             exitcode-stdio-1.0

  main-is:          TestSuite.hs

  build-depends:    base               >=4.8
                  , case-insensitive
                  -- >=0.5.8 Required for Data.Map.restrictKeys
                  , containers         >=0.5.8
                  , dlist
                  , either
                  , keys
                  , megaparsec         >=7.0.0
                  , parser-combinators >=0.2.0
                  , pcg-utility
                  , safe
                  , scientific
                  , smallcheck
                  , tasty
                  , tasty-hunit
                  , tasty-quickcheck
                  , tasty-rerun
                  , vector

  hs-source-dirs:   src, test

  ghc-options:      -threaded

  other-modules:
                       File.Format.Fasta.Internal
                       File.Format.Fasta.Parser
                       File.Format.Fasta.Test
                       File.Format.Fastc.Parser
                       File.Format.Fastc.Test
                       File.Format.Newick.Internal
                       File.Format.Newick.Parser
                       File.Format.Newick.Test
                       File.Format.TNT.Command.CCode
                       File.Format.TNT.Command.CNames
                       File.Format.TNT.Command.Procedure
                       File.Format.TNT.Command.TRead
                       File.Format.TNT.Command.XRead
                       File.Format.TNT.Internal
                       File.Format.TNT.Test
                       File.Format.TransitionCostMatrix.Parser
                       File.Format.TransitionCostMatrix.Test
                       File.Format.VertexEdgeRoot.Parser
                       File.Format.VertexEdgeRoot.Test
                       Test.Custom.Parse
                       Text.Megaparsec.Custom
                       Text.Megaparsec.Custom.Test


Executable file-tests

  main-is:             FileTests.hs

  build-depends:       base               >=4.8
                     -- >=0.5.8 Required for Data.Map.restrictKeys
                     , containers         >=0.5.8
                     , directory
                     , megaparsec         >=7.0.0
                     , pcg-file-parsers
                     , tasty
                     , tasty-hunit
--                     , tasty-rerun

  hs-source-dirs:      test

  ghc-options:         -threaded

  other-modules:       Test.Custom.Parse
                       TestSuite.GeneratedTests
                       TestSuite.GeneratedTests.Fasta
                       TestSuite.GeneratedTests.Fastc
                       TestSuite.GeneratedTests.Internal
                       TestSuite.GeneratedTests.Nexus
                       TestSuite.GeneratedTests.TNT

