cabal-version:      2.2
Category:           Biology
build-type:         Simple
name:               pcg-file-parsers
version:            0.2.0

author:             Ward Wheeler
maintainer:         wheeler@amnh.org
license:            BSD-3-Clause
license-file:       LICENSE

synopsis:           Parsers for the input file types accepted by PCG

description:        Defines file parsers for Fasta files with sequence spliting,
                    Newick files with support for extended newick format, Nexus
                    files (though many block types are skipped), DOT files as
                    graph input, TNT files (though many commands are skipped),
                    and custom file formats for parsing transition cost matrices
                    with an alphabet, and the depricated vertex/edge/root set
                    format.


common dependencies

  build-depends:
    base                     >= 4.11      && < 5.0,
    -- >=0.5.8 Required for Data.Map.restrictKeys
    containers               >= 0.5.8     && < 1.0,
    megaparsec               >= 7.0       && < 7.1,
    semigroups               >= 0.18      && < 1.0,


-- Group of buildinfo specifications to correctly build and link to the C & C++:
-- FFI code.
common ffi-buildinfo

  cc-options:       --std=c11

  cxx-options:      --std=c++14

  -- This library is required for linking to the C++ standard template library.
  extra-libraries:  stdc++

  hs-source-dirs:   ffi

  c-sources:
    ffi/external-direct-optimization/alignCharacters.c
    ffi/external-direct-optimization/alignmentMatrices.c
    ffi/external-direct-optimization/c_alignment_interface.c
    ffi/external-direct-optimization/c_code_alloc_setup.c
    ffi/external-direct-optimization/costMatrix.c
    ffi/external-direct-optimization/dyn_character.c
    ffi/external-direct-optimization/ukkCheckPoint.c
    ffi/external-direct-optimization/ukkCommon.c
    ffi/memoized-tcm/costMatrixWrapper.c
    ffi/memoized-tcm/dynamicCharacterOperations.c
    ffi/sequential-align/sequentialAlignInterface.c
    ffi/sequential-align/sequentialAlign.c

  cxx-sources:
    ffi/memoized-tcm/costMatrix_2d.cpp
    ffi/memoized-tcm/costMatrix_3d.cpp

  -- Here we list all directories that contain C & C++ header files that the FFI
  -- tools will need to locate when preprocessing the C files. Without listing
  -- the directories containing the C header files here, the FFI preprocessor
  -- (hsc2hs, c2hs, etc.) will fail to locate the requisite files. Note also,
  -- that the parent directory of the nessicary C & C++ header files must be
  -- specified. The preprocessor will not recursively look in subdirectories for
  -- header files!
  include-dirs:
    ffi/external-direct-optimization
    ffi/memoized-tcm
    ffi/sequential-align


-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common ghc-flags

  ghc-options:
    -- Optimization flags
    -O2
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -foptimal-applicative-do
    -fspecialize-aggressively
    -fstatic-argument-transformation
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies          
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-monadfail-instances
    -Wmissing-signatures
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind


-- Global deviations from Haskell98
common language-specs

  default-language: Haskell2010

  -- Always use MonadFail(fail), not Monad(fail)
  -- and explicit deriving strategy
  other-extensions:
    DerivingStrategies
    MonadFailDesugaring 


library

  import:
    dependencies,
    ghc-flags,
    language-specs

  hs-source-dirs:
    src

  build-depends:
    pcg-alphabet,
    pcg-utility,
    bimap                    >= 0.3       && < 1.0,
    case-insensitive         >= 1.2.0     && < 1.3,
    deepseq                  >= 1.4       && < 2.0,
    dlist                    >= 0.8       && < 1.0,
    -- >=2999.20 Required for forgiving construction of DOT object
    graphviz                 >= 2999.20   && < 3000,
    integer-gmp              >= 1.0       && < 2.0,
    keys                     >= 3.0       && < 4.0,
    matrix                   >= 0.3.6     && < 0.4,
    mtl                      >= 2.0       && < 3.0,
    parser-combinators       >= 1.0       && < 2.0,
    safe                     >= 0.3.17    && < 0.4,
    scientific               >= 0.3.6     && < 0.4,
    -- required for Data.Semigroup.Foldable.toNonEmpty
    semigroupoids            >= 5.2.1     && < 5.4,
    text                     >= 1.2       && < 2.0,
    text-short               >= 0.1.3     && < 1.0,
    transformers             >= 0.5.6     && < 1.0,
    -- >=0.12.0.2 required for compatability with "compact regions"
    vector                   >= 0.12.0.2  && < 0.13,
    vector-builder           >= 0.3       && < 1.0,             

  exposed-modules:
    File.Format.Dot
    File.Format.Fasta
    File.Format.Fastc
    File.Format.Newick
    File.Format.Nexus
    File.Format.TNT
    File.Format.TransitionCostMatrix
    File.Format.VertexEdgeRoot

  other-modules:
    File.Format.Fasta.Converter
    File.Format.Fasta.Internal
    File.Format.Fasta.Parser
    File.Format.Fastc.Parser
    File.Format.Newick.Internal
    File.Format.Newick.Parser
    File.Format.Nexus.Data
    File.Format.Nexus.Parser
    File.Format.Nexus.Partition
    File.Format.Nexus.Validate
    File.Format.TNT.Command.CCode
    File.Format.TNT.Command.CNames
    File.Format.TNT.Command.Cost
    File.Format.TNT.Command.NStates
    File.Format.TNT.Command.Procedure
    File.Format.TNT.Command.TRead
    File.Format.TNT.Command.XRead
    File.Format.TNT.Parser
    File.Format.TNT.Partitioning
    File.Format.TNT.Internal
    File.Format.TransitionCostMatrix.Parser
    File.Format.VertexEdgeRoot.Parser
    Text.Megaparsec.Custom


benchmark bench-space

  import:
    dependencies,
    ghc-flags,
    language-specs
         
  main-is:
    Space.hs

  type:
    exitcode-stdio-1.0  
    
  ghc-options:
    -threaded

  hs-source-dirs:
    bench
  
  build-depends:
    pcg-file-parsers,
    case-insensitive         >= 1.2.0     && < 1.3,
    criterion                >= 1.5       && < 2.0,
    deepseq                  >= 1.4       && < 2.0,
    filepath                 >= 1.4       && < 2.0,
    text                     >= 1.2       && < 2.0,
    weigh                    >= 0.0.14    && < 1.0,

  other-modules:
    Benchmark.FASTA.Files
    Benchmark.FASTA.Space
    Benchmark.FASTC.Files
    Benchmark.FASTC.Space
    Benchmark.Internal
    Benchmark.Newick.Files            
    Benchmark.Newick.Space
    Benchmark.TCM.Files            
    Benchmark.TCM.Space
    Benchmark.VER.Files            
    Benchmark.VER.Space


benchmark bench-time

  import:
    dependencies,
    ghc-flags,
    language-specs
         
  main-is:
    Time.hs

  type:
    exitcode-stdio-1.0  
    
  ghc-options:
    -threaded

  hs-source-dirs:
    bench
  
  build-depends:
    pcg-file-parsers,
    case-insensitive         >= 1.2.0     && < 1.3,
    criterion                >= 1.5       && < 2.0,
    deepseq                  >= 1.4       && < 2.0,
    filepath                 >= 1.4       && < 2.0,
    text                     >= 1.2       && < 2.0,
    weigh                    >= 0.0.14    && < 1.0,

  other-modules:
    Benchmark.FASTA.Files
    Benchmark.FASTA.Time
    Benchmark.FASTC.Files
    Benchmark.FASTC.Time
    Benchmark.Internal
    Benchmark.Newick.Files
    Benchmark.Newick.Time
    Benchmark.TCM.Files            
    Benchmark.TCM.Time
    Benchmark.VER.Files
    Benchmark.VER.Time


executable file-tests

  import:
    dependencies,
    ghc-flags,
    language-specs
         
  main-is:
    FileTests.hs

  ghc-options:
    -threaded

  hs-source-dirs:
    test
  
  build-depends:
    pcg-file-parsers,
    directory                >= 1.3       && < 2.0,
    tasty                    >= 1.2       && < 2.0,
    tasty-hunit              >= 0.10      && < 1.0,

  other-modules:
    Test.Custom.Parse
    TestSuite.GeneratedTests
    TestSuite.GeneratedTests.Fasta
    TestSuite.GeneratedTests.Fastc
    TestSuite.GeneratedTests.Internal
    TestSuite.GeneratedTests.Nexus
    TestSuite.GeneratedTests.TNT


test-suite unit-tests

  import:
    dependencies,
    ghc-flags,
    language-specs

  main-is:          
    TestSuite.hs

  type:             
    exitcode-stdio-1.0

  hs-source-dirs:   
    src,
    test

  ghc-options:      
    -threaded

  build-depends:
    pcg-alphabet,
    pcg-utility,
    bimap                    >= 0.3       && < 1.0,
    case-insensitive         >= 1.2.0     && < 1.3,
    deepseq                  >= 1.4       && < 2.0,
    dlist                    >= 0.8       && < 1.0,
    integer-gmp              >= 1.0       && < 2.0,
    keys                     >= 3.0       && < 4.0,
    matrix                   >= 0.3.6     && < 0.4,
    parser-combinators       >= 1.0       && < 2.0,
    QuickCheck               >= 2.12      && < 3.0,
    safe                     >= 0.3.17    && < 0.4,
    scientific               >= 0.3.6     && < 0.4,
    -- required for Data.Semigroup.Foldable.toNonEmpty
    semigroupoids            >= 5.2.1     && < 5.4,
    smallcheck               >= 1.1.5     && < 2.0,
    tasty                    >= 1.2       && < 2.0,
    tasty-hunit              >= 0.10      && < 1.0,
    tasty-quickcheck         >= 0.9       && < 1.0,
    tasty-rerun              >= 1.1.14    && < 2.0,
    text                     >= 1.2       && < 2.0,
    text-short               >= 0.1.3     && < 1.0,
    -- >=0.12.0.2 required for compatability with "compact regions"
    vector                   >= 0.12.0.2  && < 0.13,
    vector-builder           >= 0.3       && < 1.0,             

  other-modules:
    File.Format.Fasta.Internal
    File.Format.Fasta.Parser
    File.Format.Fasta.Test
    File.Format.Fastc.Parser
    File.Format.Fastc.Test
    File.Format.Newick.Internal
    File.Format.Newick.Parser
    File.Format.Newick.Test
    File.Format.TNT.Command.CCode
    File.Format.TNT.Command.CNames
    File.Format.TNT.Command.Procedure
    File.Format.TNT.Command.TRead
    File.Format.TNT.Command.XRead
    File.Format.TNT.Internal
    File.Format.TNT.Test
    File.Format.TransitionCostMatrix.Parser
    File.Format.TransitionCostMatrix.Test
    File.Format.VertexEdgeRoot.Parser
    File.Format.VertexEdgeRoot.Test
    Test.Custom.Parse
    Text.Megaparsec.Custom
    Text.Megaparsec.Custom.Test
