cabal-version:      2.2
Category:           Biology
build-type:         Simple
name:               pcg-file-source
version:            0.2.0

author:             Ward Wheeler
maintainer:         wheeler@amnh.org
license:            BSD-3-Clause
license-file:       LICENSE

synopsis:           Library for interacting with file paths in a type-safe manner.
                    
description:        Exposes a well-typed file path type and functionality for
                    interacting with the file system through with this type.

        
common dependencies

  build-depends:
    base                     >= 4.11      && < 5.0,
    deepseq                  >= 1.4       && < 2.0,
    semigroups               >= 0.18      && < 1.0,


-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common ghc-flags

  ghc-options:
    -- Optimization flags
    -O2
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -foptimal-applicative-do
    -fspecialize-aggressively
    -fstatic-argument-transformation
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies          
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-monadfail-instances
    -Wmissing-signatures
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind

common language-spec

  default-language: Haskell2010

  -- Always use MonadFail(fail), not Monad(fail)
  other-extensions:
    DerivingStrategies
    MonadFailDesugaring


library

  import:
    dependencies,
    ghc-flags,
    language-spec     

  hs-source-dirs:
    src

  build-depends:
    pcg-serialize,
    pcg-validation-transformer,
    binary                   >= 0.6       && < 1.0,
    bytestring               >= 0.10.8    && < 0.11,
    -- >=0.5.8 Required for Data.Map.restrictKeys
    compact                  >= 0.1       && < 2.0,
    directory                >= 1.3       && < 2.0,
    filepath                 >= 1.4       && < 2.0,
    Glob                     >= 0.9       && < 2.0,
    hashable                 >= 1.2       && < 2.0,
    keys                     >= 3.0       && < 4.0,
    megaparsec               >= 7.0       && < 7.1,                        
    mono-traversable         >= 1.0       && < 2.0,
    mono-traversable-keys    >= 0.1       && < 1.0,
    pipes                    >= 4.0       && < 5.0,            
    QuickCheck               >= 2.12      && < 3.0,
    -- required for Data.Semigroup.Foldable.toNonEmpty
    semigroupoids            >= 5.2.1     && < 5.4,
    text                     >= 1.2       && < 2.0,
    text-short               >= 0.1.3     && < 1.0,
    text-show                >= 3.8.1     && < 4.0,
    validation               >= 1.1       && < 2.0,
    -- >=0.12.0.2 required for compatability with "compact regions"
    vector                   >= 0.12.0.2  && < 0.13,
                
  exposed-modules:
    Data.FileSource
    Data.FileSource.IO
    Data.FileSource.InputStreamError
    Data.FileSource.ParseStreamError
    Data.FileSource.OutputStreamError

--test-suite test-suite

--  import:
--    dependencies,
--    ghc-flags,
--    language-spec     

--  main-is:          
--    TestSuite.hs

--  type:             
--    exitcode-stdio-1.0

--  hs-source-dirs:
--    test

--  build-depends:
--    pcg-utility,
--    bv-little                >= 1.0       && < 2.0,
--    integer-gmp              >= 1.0       && < 2.0,
--    mono-traversable         >= 1.0       && < 2.0,
--    parallel                 >= 3.2       && < 4.0,
--    QuickCheck               >= 2.12      && < 3.0,
--    tasty                    >= 1.2       && < 2.0,
--    tasty-hunit              >= 0.10      && < 1.0,
--    tasty-quickcheck         >= 0.9       && < 1.0,
--    tasty-rerun              >= 1.1.14    && < 2.0,
                    
--  other-modules:
--    Data.FileSource.Test
